<resources>
    <string name="app_name">Newsgatik</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="enter_password">Enter password</string>
    <string name="log_in">Log In</string>
    <string name="newsgatik">Newsgatik</string>
</resources>