<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textSize="60sp"
            />

        <EditText
            android:id="@+id/upusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:ems="10"

            android:hint="Enter your name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="15dp" />

        <EditText
            android:id="@+id/upemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="Enter your email id"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="15dp" />

        <!--        <EditText-->
        <!--            android:id="@+id/uppone"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginBottom="10dp"-->
        <!--            android:ems="10"-->
        <!--            android:background="@drawable/share_rounded_corner_with_border_text"-->
        <!--            android:hint="Enter mobile number"-->
        <!--            android:inputType="textPassword"-->
        <!--            android:minHeight="48dp"-->
        <!--            android:padding="15dp" />-->
        <EditText
            android:id="@+id/uppassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="Enter password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="15dp" />

        <TextView
            android:id="@+id/forgetpasswordup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:padding="3dp"
            android:text="@string/forget_password" />

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="28dp"
            tools:text="Sign Up" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="-------------------OR--------------------"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up using"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/upgoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="70dp"
                android:src="@drawable/btn_face__rounded" />

            <ImageButton
                android:id="@+id/upfacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:src="@drawable/btn_google__rounded" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/upphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/don_t_have_an_account"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/logintxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/upphone"
                android:text="Login"
                android:textColor="#de1010"
                android:textSize="15sp" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>